[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public-transit"
description = "Public Transit CLI"
authors = [
    {name = "Tyler D. North", email = "me@tyler-north.com"}
]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "beautifulsoup4==4.14.3",
    "click==8.3.3",
    "jsonschema==4.26.0",
    "prettytable==3.17.0",
    "pytz==2026.1.post1",
    "SQLAlchemy==2.0.49",
    "requests==2.33.1",
    "xmltodict==1.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "requests-mock==1.12.1",
    "tox==4.53.0",
    "pylint==4.0.5",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["*tests"]

[project.scripts]
bart = "transit.cli.bart:main"
nextbus = "transit.cli.nextbus:main"
actransit = "transit.cli.actransit:main"
trip-planner = "trip_planner.cli.planner_script:main"
