[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public-transit"
description = "Public Transit CLI"
authors = [
    {name = "Tyler D. North", email = "me@tyler-north.com"}
]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "beautifulsoup4==4.15.0",
    "click==8.4.2",
    "dappertable @ https://gitlab.com/tnoff-projects/dappertable/-/archive/v1.1.5/dappertable.tar.gz",
    "jsonschema==4.26.0",
    "pytz==2026.2",
    "SQLAlchemy==2.0.51",
    "requests==2.34.2",
    "xmltodict==1.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "requests-mock==1.12.1",
    "tox==4.57.0",
    "pylint==4.0.6",
    "bandit==1.9.4",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["*tests"]

[project.scripts]
bart = "transit.cli.bart:main"
nextbus = "transit.cli.nextbus:main"
actransit = "transit.cli.actransit:main"
five11 = "transit.cli.five11:main"
trip-planner = "trip_planner.cli.planner_script:main"
